--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "watch": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -12,7 +13,10 @@
     "express": "~4.15.2",
     "helmet": "^3.8.1",
     "morgan": "~1.8.1",
-    "pug": "~2.0.0-beta11",
+    "pug": "^2.0.0-rc.4",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.0"
   }
 }
