--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -7,11 +7,14 @@
     "watch": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "helmet": "^3.8.1",
+    "jsonwebtoken": "^8.0.1",
+    "mongoose": "^4.11.11",
     "morgan": "~1.8.1",
     "pug": "^2.0.0-rc.4",
     "serve-favicon": "~2.4.2"
