--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -11,6 +11,7 @@
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "email-validator": "^1.1.1",
     "express": "~4.15.2",
     "helmet": "^3.8.1",
     "jsonwebtoken": "^8.0.1",
