--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "watch": "nodemon ./bin/www"
+    "watch": "nodemon ./bin/www",
+    "test": "mocha ./tests/**/*.test.js ./tests/**/**/*.test.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -21,6 +22,12 @@
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
-    "nodemon": "^1.12.0"
+    "chai": "^4.1.2",
+    "mocha": "^3.5.3",
+    "nodemon": "^1.12.0",
+    "proxyquire": "^1.8.0",
+    "sinon": "^3.3.0",
+    "sinon-chai": "^2.13.0",
+    "supertest": "^3.0.0"
   }
 }
