--- a/backend/app/package.json
+++ b/backend/app/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "js-yaml": "^3.10.0",
     "mocha": "^3.5.3",
     "nodemon": "^1.12.0",
     "proxyquire": "^1.8.0",
